// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<td
  className="cf-table__cell"
>
  TableCell
</td>
`;

exports[`should render extra class name 1`] = `
<td
  className="cf-table__cell extra"
>
  TableCell
</td>
`;

exports[`should render with align 1`] = `
<td
  className="cf-table__cell cf-table__cell--align-center"
>
  TableCell
</td>
`;
